--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -120,6 +120,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
               display: flex;
               width: 48px;
               height: 48px;
+              min-width: 48px;
+              max-height: 48px;
               justify-content: center;
               align-items: center;
               gap: 10px;
@@ -662,6 +664,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
                 display: flex;
                 width: 24px;
                 height: 24px;
+                min-width: 24px;
+                min-height: 24px;
                 justify-content: center;
                 align-items: center;
                 gap: 10px;
@@ -684,9 +688,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
                 align-items: flex-start;
                 gap: 10px;
                 border-radius: 0px 16px 16px 16px;
-                background: #cf0;
-                opacity: 0.5;
-                color: #000;
+                background: var(--White-10, rgba(255, 255, 255, 0.1));
+                color: #fff;
                 font-family: Pretendard400;
                 font-size: 14px;
                 font-style: normal;
