--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -1,14 +1,13 @@
 .music_create {
   display: flex;
   width: 100%;
-  max-width: 1590px;
+  height: 100%;
   // gap: 30px;
   * {
     box-sizing: border-box;
   }
   .chatbot-mode {
-    height: 816px;
-    overflow: hidden;
+    height: 100%;
     // overflow-y: auto; /* 가로 스크롤 방지용으로 auto 권장 */
     // scrollbar-width: none; /* Firefox */
     // -ms-overflow-style: none; /* IE 10+ */
@@ -479,6 +478,7 @@
   .music_create {
     display: flex;
     flex-direction: column-reverse;
+    height: 100vh;
     .selected-wrap {
       .button-wrap__left {
         button {
