--- a/src/components/mypage/albumsAndCollectionsComponents/modals/SongAddAlbumModal.scss
+++ b/src/components/mypage/albumsAndCollectionsComponents/modals/SongAddAlbumModal.scss
@@ -76,6 +76,15 @@
     gap: 8px;
   }
 
+  &__loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__album-item {
     display: flex;
     align-items: center;
