izzy : 아이콘 active 풀렸을 때 부드럽게 돌아가도록 transition 추가

--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -441,6 +441,7 @@
         width: 100%;
         max-width: 140px;
         aspect-ratio: 1/1;
+        transition: all 0.3s ease;
       }
       .create__get-started--format-item-title {
         color: #fff;
