izzy : 메인 슬라이드 완료

--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -425,7 +425,7 @@
       display: none;
     }
     .rhap_main-controls{
-      justify-content: end;
+      justify-content: flex-end;
       position: relative;
       right: -26px;
       button{
