--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ body {
   height: 100%;
   background-color: #121212;
   position: relative;
+  font-size: 14px;
+  line-height: 120%;
+  font-family: 'Pretendard';
 }
 #root {
   background: #121212;
@@ -45,9 +48,6 @@ body {
   text-decoration: none;
   color: #fff;
   box-sizing: border-box;
-  font-size: 14px;
-  font-family: 'Pretendard400';
-  line-height: 120%;
 }
 *:focus {
   outline: 0;
@@ -140,12 +140,8 @@ img {
 }
 .inner {
   width: calc(100% - 246px);
-  /* width: 100%; */
-  /* max-width: calc(960px + 32px); */
-  /* margin: 0 auto; */
   margin-left: auto;
-  padding: 32px 16px 100px;
-  /* padding: 186px 16px 100px; */
+  padding: 24px 16px 100px;
 }
 
 font {
