--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -611,8 +611,8 @@
 
 @media screen and (max-width: 768px) {
   .modal-wrap {
-    justify-content: end;
-    align-items: end;
+    justify-content: flex-end;
+    align-items: flex-end;
     .modal-content-box {
       max-width: 100%;
       width: 100%;
