--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1,4 +1,106 @@
 .main {
+  // banner-swiper START
+  .banner-slider{
+    width: 100%;
+    position: relative;
+    padding-bottom: 40px;
+    &__swiper{
+      width: 100%;
+      height: 100%;
+      border-radius: 24px;
+      overflow: visible;
+    }
+    &__swiper-list{
+      width: 100%;
+      height: clamp(180px, 30vw, 340px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-sizing: border-box;
+      background: linear-gradient(180deg, #071D54 0%, #040F2A 100%);
+      overflow: hidden;
+    }
+    &__swiper-content{
+      width: 100%;
+      height: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      font-weight: 700;
+      flex: 1;
+      .swiper-context{
+        padding: clamp(16px, 3.5vw, 34px) 2.5%;
+        height: clamp(180px, 30vw, 340px);
+        display: flex;
+        flex-direction: column;
+      }
+    }
+    &__welcome-txt{
+      font-size: clamp(12px, 2vw, 24px);
+      line-height: clamp(20px, 3vw, 34px);
+      color: rgba(255, 255, 255, 0.80);
+      margin-bottom: 20px;
+    }
+    &__welcome-desc{
+      .desc-txt{
+        display: flex;
+        column-gap: 4px;
+        font-size: clamp(16px, 4vw, 34px);
+        line-height: clamp(24px, 5.5vw, 46px);
+        span{
+          color: rgba(255, 255, 255, 0.50);
+        }
+        strong{
+          color: #fff;
+        }
+      }
+    }
+    &__creattion-txt{
+      margin-top: auto;
+      color: rgba(255, 255, 255, 0.70);
+      font-size: clamp(12px, 2.5vw, 16px);
+      line-height: clamp(18px, 3.5vw, 24px);
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+    }
+    &__music-icon{
+      position: absolute;
+      width: 100%;
+      max-width: clamp(120px, 25vw, 390px);
+      right: 0;
+      bottom: -55px;
+      transition: all .3s ease;
+      transform: rotate(3.842deg);
+      @media screen and (max-width: 768px) {
+        bottom: -35px;
+      }
+    }
+    &__swiper-banner-img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  }
+}
+
+// swiper Indicator
+.swiper-pagination{
+  bottom: -24px !important;
+  .swiper-pagination-bullet{
+    width: 8px !important;
+    height: 8px !important;
+    background-color: rgba(204, 255, 0, 0.50) !important;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: #CCFF00 !important;
+    width: 16px !important;
+    border-radius: 8px !important;
+  }
+}
+
+  
   // .album__content-list {
   .main__to-day-header {
     width: 100%;
@@ -1273,8 +1375,7 @@
       } //swiper-music-list__item--END--
     } //swiper-music-list--END--
   } //album__slide--END--
-}
-// } //.album--END--
+   //.album--END--
 
 .album__content-list__evaluation-stage__view-all-btn {
   width: 100%;
