--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -153,24 +153,47 @@
   }
 }// search-section END
 
-  
+// artist-slider START
 .artist-slider{
   width: 100%;
+  max-width: 100%;
+  .swiper-wrapper{
+    justify-content: space-between;
+  }
   .swiper-slide{
-    width: fit-content !important;
-    margin: 0 !important;
-    transform: scale(0.75) !important;
+    flex-shrink: 0;
     transition: all .3s ease;
     text-align: center;
+    .artist-item {
+      transform: scale(0.68);
+      transition: transform 0.3s ease;
+    }
   }
   .swiper-slide-active{
-    transform: scale(1) !important;
+    transform: scale(0.95) !important;
+    opacity: 1;
+    z-index: 2;
+    .artist-item{
+      transform: scale(1);
+    }
   }
   .artist-item{
     display: flex; 
     flex-direction: column;
     row-gap: 24px;
     flex-shrink: 0;
+  }
+  .artist-thumb{
+    width: 160px;
+    height: 160px;
+    margin: 0 auto;
+    border-radius: 100%;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   .artist-info{
     display: flex;
@@ -181,10 +204,14 @@
       justify-content: center;
       align-items: center;
       column-gap: 12px;
-      font-size: clamp(16px, 2vw, 24px);
-      line-height: clamp(24px, 3vw, 36px);
+      font-size: clamp(16px, 1.1vw, 24px);
+      line-height: clamp(24px, 1.6vw, 36px);
       color: #fff;
       font-weight: 400;
+      .artist-level{
+        width: 100%;
+        max-width: 20px;
+      }
     }
     .artist-meta{
       display: flex;
@@ -203,7 +230,7 @@
       }
     }
   }
-}
+} // artist-slider END
 
 
   // .album__content-list{
