--- a/src/styles/VoteEvent.scss
+++ b/src/styles/VoteEvent.scss
@@ -5,4 +5,22 @@
         width: 100%;
         padding: 114px 16px 100px;
     }
+    
+    .info-section{
+        display: flex;
+        flex-direction: column;
+        row-gap: clamp(60px, 8.33vw, 120px);
+        &__tit{
+            color: #fff;
+            font-weight: 700;
+            font-size: clamp(16px, 2.5vw, 30px);
+            line-height: clamp(24px, 3.33vw, 40px);
+            margin-bottom: clamp(20px, 2vw, 30px);
+            .subtit{
+                padding-top: clamp(8px, 1.1vw, 16px);
+                font-size: clamp(12px, 0.9vw, 14px);
+                line-height: clamp(18px, 1.5vw, 22px);
+            }
+        }
+    }
 }
