--- a/src/styles/VoteEvent.scss
+++ b/src/styles/VoteEvent.scss
@@ -1,26 +1,345 @@
+/* ============================================================
+   ▶ 공통 스타일
+============================================================ */
+
+/* -------------------- Common Section -------------------- */
 .vote-wrapper{
     width: calc(100% - 246px);
     margin-left: auto;
-    @media screen and (max-width: 1000px) {
+    background-color: #0B0B0C;
+}
+.color-green{
+    color: #CF0 !important;
+}
+
+/* -------------------- Event Banner Section -------------------- */
+.banner-section{
+    margin-bottom: clamp(40px, 7vw, 110px);
+    &__bg{
+        background: url('../assets/images/vote/vote-banner-bg.png') no-repeat top center / 100%;
+        position: relative;
         width: 100%;
-        padding: 114px 16px 100px;
+        aspect-ratio: 1624 / 600;
+        max-height: 660px;
+
+        img{
+            position: absolute;
+            transition: all .3s ease;
+        }
+        .txt-img{
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 35%;
+            max-width: 600px;
+        }
+        .icon{
+            position: absolute;
+            &--01{
+                max-width: clamp(42px, 7.7vw, 110px);
+                left: 6%;
+                top: 10%;
+            }
+            &--02{
+                max-width: clamp(50px, 9vw, 130px);
+                right: 10%;
+                top: 8%;
+            }
+            &--03{
+                max-width: clamp(36px, 11vw, 160px);
+                left: 10%;
+                bottom: -5%;
+            }
+            &--04{
+                max-width: clamp(60px, 11vw, 160px);
+                right: 10%;
+                bottom: -3%;
+            }
+        }
     }
-    
-    .info-section{
-        display: flex;
-        flex-direction: column;
-        row-gap: clamp(60px, 8.33vw, 120px);
-        &__tit{
+    &__txt{
+        padding-top: 10px;
+        text-align: center;
+        .txt-tit{
             color: #fff;
             font-weight: 700;
             font-size: clamp(16px, 2.5vw, 30px);
-            line-height: clamp(24px, 3.33vw, 40px);
-            margin-bottom: clamp(20px, 2vw, 30px);
-            .subtit{
-                padding-top: clamp(8px, 1.1vw, 16px);
-                font-size: clamp(12px, 0.9vw, 14px);
-                line-height: clamp(18px, 1.5vw, 22px);
+            line-height: clamp(24px, 3.3vw, 40px);
+            margin-bottom: clamp(12px, 1.6vw, 24px);
+        }
+        .txt-desc{
+            font-size: clamp(14px, 1.6vw, 24px);
+            line-height: clamp(22px, 2.4vw, 36px);
+            p{
+                color: rgba(255, 255, 255, 0.70);
+                font-weight: 400;
+
+            }
+
+            .color-green{
+                font-weight: 700;
             }
         }
+    }
+}
+
+/* -------------------- Info Section -------------------- */
+.info-section{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: clamp(60px, 8.33vw, 120px);
+    max-width: 960px;
+    align-items: center;
+    > div{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__tit{
+        color: #fff;
+        font-weight: 700;
+        font-size: clamp(16px, 2.5vw, 30px);
+        line-height: clamp(24px, 3.3vw, 40px);
+        margin-bottom: clamp(20px, 2vw, 30px);
+        text-align: center;
+        .subtit{
+            display: block;
+            padding-top: clamp(8px, 1.1vw, 16px);
+            font-size: clamp(12px, 0.9vw, 14px);
+            line-height: clamp(18px, 1.5vw, 22px);
+        }
+    }
+    // 참여 및 투표 마감 안내 START
+    &__countdown-list{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        column-gap: 1.5%;
+        margin-bottom: clamp(24px, 3.3vw, 48px);
+        width: 100%;
+        max-width: 600px;
+
+        li:nth-child(odd){
+            display: flex;
+            flex-direction: column;
+            row-gap: 12px;
+            align-items: center;
+            flex: 1;
+            min-width: 0;
+            
+            .count{
+                aspect-ratio: 1;
+                width: 100%;
+                height: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-weight: 700;
+                font-size: clamp(18px, 3vw, 34px);
+                line-height: clamp(28px, 4.2vw, 44px);
+                border-radius: clamp(12px, 1.6vw, 24px);
+                border: 1px solid #767676;
+                flex: 1;
+            }
+            span{
+                color: #767676;
+                font-weight: 400;
+                font-size: clamp(12px, 1.2vw, 18px);
+                line-height: clamp(18px, 1.9vw, 28px);
+            }
+        }
+        li:nth-child(even){
+            font-weight: 400;
+            font-size: clamp(20px, 3.3vw, 48px);
+            line-height: clamp(30px, 4vw, 58px);
+            flex: 0 0 auto;
+        }
+    }
+    &__countdown-btn{
+        color: #000;
+        font-size: clamp(18px, 1.6vw, 24px);
+        line-height: clamp(28px, 2.3vw, 34px);
+        border-radius: 40px;
+        border: 2px solid rgba(255, 255, 255, 0.50);
+        background: linear-gradient(180deg, #DCFF52 0%, #A5CF00 100%);
+        padding: clamp(12px, 1.6vw, 24px) 0;
+        display: block;
+        width: 100%;
+        max-width: 500px;
+        text-align: center;
+        font-weight: 700;
+        margin-bottom: 16px;
+    }
+    .color-green{
+        font-size: clamp(12px, 0.9vw, 14px);
+        line-height: clamp(18px, 1.5vw, 22px);
+    }
+    // 참여 및 투표 마감 안내 END
+
+    // 신청 방법 START
+    &__apply-list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        row-gap: 16px;
+        margin-bottom: clamp(12px, 1.6vw, 24px);
+        li{
+            flex: 0 0 49%;
+            padding: clamp(12px, 1.3vw, 20px) 2.5%;
+            border-radius: 16px;
+            background-color: rgba(255, 255, 255, 0.05);
+            strong{
+                font-size: clamp(12px, 0.9vw, 14px);
+                line-height: clamp(18px, 1.5vw, 22px);
+                color: #FF73F3;
+                font-weight: 700;
+                margin-bottom: 8px;
+                display: block;
+            }
+            p{
+                font-size: 14px;
+                line-height: 22px;
+                color: #ababab;
+                b{
+                    font-weight: inherit;
+                    color: #fff;
+                }
+            }
+            
+        }
+    }
+    &__kakao-link{
+        display: flex;
+        align-items: center;
+        column-gap: 12px;
+        font-size: 14px;
+        line-height: 22px;
+        padding: 12px clamp(20px, 2vw, 30px);
+        border-radius: 60px;
+        border: 1px solid rgba(255, 255, 255, 0.20);
+        background-color: rgba(255, 255, 255, 0.05);
+        margin-bottom: 20px;
+    }
+    &__open-link{
+        padding-right: 30px;
+        background: url('../assets/images/icons/link-icon.svg') no-repeat right center / 24px;
+    }
+    // 신청 방법 END
+
+    // 실시간 인기곡 TOP 10 START
+    &__popular-list{
+        li:not(:first-of-type){
+            border-top: 1px solid rgba(255, 255, 255, 0.10);
+        }
+        li:first-of-type{
+            .popular-item__left .rank-numb,
+            .popular-item__right strong{
+                color: #CF0;
+            }
+        }
+        .popular-item{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &__left{
+                display: flex;
+                justify-content: space-between;
+                .rank-numb{
+                    margin-right: 16px;
+                }
+                img{
+                    width: 100%;
+                    max-width: 80px;
+                    aspect-ratio: 1;
+                    border-radius: 16px;
+                }
+            }
+        }
+    }
+    // 실시간 인기곡 TOP 10 END
+}
+
+
+/* ============================================================
+   ▶ 반응형 max-width: 1000px
+============================================================ */
+@media screen and (max-width: 1000px) {
+    .vote-wrapper{
+        width: 100%;
+        padding: 96px 16px 100px;
+    }
+    .banner-section{
+        position: relative;
+        &__bg{
+            background-image: url('../assets/images/vote/vote-banner-bg-mobile.png');
+            aspect-ratio: 5 / 6;
+            background-size: 100% auto; 
+            max-height: 660px;
+            .txt-img{
+                width: 70%;
+                top: 35%;
+            }
+            .icon--02{
+                right: 2%;
+            }
+            .icon--03{
+                bottom: 30%;
+                left: 6%;
+            }
+            .icon--04{
+                bottom: 25%;
+                right: 4%;
+            }
+        }
+        &__txt{
+            width: 100%;
+            padding: 0;
+            position: absolute;
+            top: 70%;
+        }
+        
+    }
+    .info-section{
+        &__apply-list{
+            flex-direction: column;
+            li{
+                flex: 0 0 100%;
+            }
+        }
+    }
+}
+
+/* ============================================================
+   ▶ 반응형 max-width: 768px
+============================================================ */
+@media screen and (max-width: 768px){
+
+}
+
+/* ============================================================
+   ▶ 반응형 max-width: 480px
+============================================================ */
+@media screen and (max-width: 480px){
+    .banner-section{
+        &__bg{
+            min-height: 400px;
+            .txt-img{
+                top: 25%;
+            }
+            .icon--03{
+                bottom: 15%;
+                left: 2%;
+            }
+            .icon--04{
+                right: 0;
+                bottom: 10%;
+            }
+        }
+        &__txt{
+            top: 55%;
+        }
+
     }
 }
