--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -24,6 +24,7 @@
   &__swiper-content{
     width: 100%;
     height: 100%;
+    min-height: clamp(180px, 30vw, 340px);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -81,6 +82,7 @@
   &__picture{
     display: block;
     height: 100%;
+    min-height: clamp(180px, 30vw, 340px);
   }
   &__swiper-banner-img{
     object-fit: cover;
